# beacon

./: Cargo.toml  README.md
crates/yaff/: Cargo.toml
src/: app.rs  application.rs  config.rs  desktop.rs  history.rs  main.rs  searcher.rs
src/gui/: mod.rs
src/gui/style/: mod.rs
