[package]
name = "beacon"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
rust-ini = "0.21.3"
rayon = "1.11"
memory-stats = "1.2.0"
pretty-bytes = "0.2.2"
nucleo = "0.5.0"
libc = "0.2"
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
yaff = {path = "crates/yaff"}
